# ghosthid_w

./: .gitignore  CMakeCache.txt  CMakeLists.txt  build.ninja  prj.conf
Drivers/ch375/include/: bswap.h  ch375.h  ch375_interface.h  ch375_usbhost.h  config.h  usb.h
Drivers/ch375/include/hid/: hid_mouse.h  usbhid.h
Drivers/ch375/src/: ch375.c  ch375_usbhost.c
Drivers/ch375/src/hid/: hid.c  hid_keyboard.c  hid_mouse.c  usbhid.c
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Inc/: usbd_customhid.h
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Src/: usbd_customhid.c
Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_conf_template.h
Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_desc_template.c
USB_DEVICE/App/: composite_hid.c  composite_hid.h  usb_device.c  usb_device.h  usbd_desc.c
boards/: stm32f4_disco.overlay
include/: auto_gun_press.h  auto_gun_press_data.h  bswap.h  ch375.h  ch375_interface.h  ch375_uart_parity.h  ch375_zephyr_adapter.h  composite_hid_wrapper.h  hid_bridge.h  log_compat.h  main.h  usb.h  usb_hid_device.h
include/ch375/: ch375.h  ch375_host.h  ch375_uart.h  usb.h
include/hid/: async_report.h  hid.h  hid_keyboard.h  hid_mouse.h  hid_parser.h
include/usb/: composite_hid.h
src/: auto_gun_press.c  ch375.c  ch375_uart_parity.c  ch375_usbhost.c  ch375_zephyr_adapter.c  ch375_zephyr_glue.c  composite_hid_wrapper.c  hal_shim.c  hid_bridge.c  log_compat.c  main.c  usb_hid_device.c  usb_hid_forwarder.c
src/drivers/: ch375.c  ch375_host.c  ch375_uart.c
src/hid/: async_report.c  hid.c  hid_keyboard.c  hid_mouse.c  hid_parser.c  usbhid.c
src/usb/: composite_hid.c
